--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "api"
   ],
   "author": "Miguel Corrêa",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "typescript": "^5.0.2"
+  }
 }
