--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "author": "Miguel Corrêa",
   "license": "ISC",
   "devDependencies": {
+    "@types/module-alias": "^2.0.1",
     "@types/node": "^18.15.11",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "module-alias": "^2.2.2"
   }
 }
