--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2023",
+    "target": "es2022",
     "moduleResolution": "node",
     "module": "CommonJS",
     "lib": ["ES2019"],
