--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Miguel Corrêa",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.15.11",
@@ -34,6 +35,9 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.6",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "module-alias": "^2.2.2"
   }
 }
