--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
     "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "test:functional": "jest --projects ./test --runInBand",
+    "test:unit": "jest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -22,6 +23,8 @@
   "author": "Miguel Corrêa",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/module-alias": "^2.0.1",
@@ -39,7 +42,9 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
+    "axios": "^1.3.4",
     "body-parser": "^1.20.2",
+    "config": "^3.3.9",
     "express": "^4.18.2",
     "module-alias": "^2.2.2"
   }
