--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/module-alias": "^2.0.1",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.11",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
@@ -46,6 +47,7 @@
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "express": "^4.18.2",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "mongoose": "^7.1.0"
   }
 }
