--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,10 @@
     "noImplicitReturns": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
-      "@src/*": ["./src/*"],
-      "@test/*": ["./test/*"]
+      "src/*": ["./src/*"],
+      "test/*": ["./test/*"],
     },
     "rootDirs": [
       "./src",
